<resources>
    <string name="app_name">FirebaseNotes</string>
    <string name="welcome">Welcome!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="recover_password">Recover password</string>
    <string name="back_to_login">Back To Login Page</string>
    <string name="new_user">New User</string>
    <string name="create_account">Create Account</string>
</resources>