<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/centerLine"/>

    <LinearLayout
        android:layout_above="@+id/centerLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="42sp"
            android:textColor="#FFE500"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_continue"
            android:textSize="23sp"
            android:textColor="#FF0000"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centerLine"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/centerLine"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_design"
        android:layout_below="@+id/password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@string/log_in"
            android:layout_centerInParent="true"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/gotofogot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/login"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAlignment="center"/>

    <RelativeLayout
        android:id="@+id/gotosignup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_design"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@string/sign_up"
            android:layout_centerInParent="true"
            android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>